# orbit_money

./: Makefile  README.md
.github/workflows/: ci.yml
contracts/: Cargo.toml
contracts/agt-token/: Cargo.toml
contracts/agt-token/src/: lib.rs  test.rs
contracts/agt-token/test_snapshots/test/: test_initialize.1.json
contracts/bridge/: Cargo.toml
contracts/bridge/src/: lib.rs  test.rs
contracts/liquidity-pool/: Cargo.toml
contracts/liquidity-pool/src/: lib.rs  test.rs
deployments/: testnet.json
frontend/: .env.example  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/api/admin/mint/: route.ts
frontend/app/api/admin/seed/: route.ts
frontend/app/api/balance/[publicKey]/: route.ts
frontend/app/api/events/: route.ts
frontend/app/api/pool/: route.ts
frontend/app/api/price/: route.ts
frontend/app/dashboard/: page.tsx
frontend/app/pool/: page.tsx
frontend/app/swap/: page.tsx
frontend/components/: EventFeed.tsx  Navbar.tsx  StatsBar.tsx  SwapCard.tsx  TrustlineCard.tsx
frontend/hooks/: useAGTBalance.ts  useAGTPrice.ts  useFreighter.ts  usePoolStats.ts  useTrustline.ts
frontend/lib/: safeStellarCall.ts
scripts/: deploy.js  setup-trustlines.js
